Fix smart quotes and dash

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "id": "com.stremio.torrentio.addon",
   "version": "1",
   "name": "ANBU",
-  "description": "Checked & Secured by ANBU – Cybersecurity & AI Expert – Mr. B",
+  "description": "Checked & Secured by ANBU - Cybersecurity & AI Expert - Mr. B",
   "catalogs": [],
   "resources": [
     {
